--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@
             {% if author %}
             <!-- Personal Info. -->
             Escrito por <a href="{{ author.web }}">{{ author.name }}</a>
-            {% endif %} {{page.date | date_to_string}}
+            {% endif %} &#8226; {{page.date | date_to_string}}
           </small>
 
           <div class="categories">
@@ -21,29 +21,47 @@
             <a href="#!" class="category">{{c}}</a>
             {% endfor %}
           </div>
-          <div class="share-page">
-            Compartir &rarr;
+          <div id="share">
+            <!-- facebook -->
+            <small><i class="fa-solid fa-share"></i></small>
             <a
-              href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}"
-              rel="nofollow"
-              target="_blank"
-              title="Share on Twitter"
-              ><i class="fa-brands fa-twitter"></i
+              class="facebook"
+              href="https://www.facebook.com/share.php?u={{site.url}}{{page.url}}&title={{page.title}}"
+              target="blank"
+              ><i class="fa fa-facebook"></i
             ></a>
+
+            <!-- twitter -->
             <a
-              href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}"
-              rel="nofollow"
-              target="_blank"
-              title="Share on Facebook"
-              >Facebook</a
-            >
+              class="twitter"
+              href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ site.baseurl }}{{ page.url }}"
+              target="blank"
+              ><i class="fa fa-twitter"></i
+            ></a>
+
+            <!-- google plus -->
             <a
-              href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}"
-              rel="nofollow"
-              target="_blank"
-              title="Share on Google+"
-              >Google+</a
-            >
+              class="googleplus"
+              href="https://plus.google.com/share?url={{url}}"
+              target="blank"
+              ><i class="fa fa-google-plus"></i
+            ></a>
+
+            <!-- linkedin -->
+            <a
+              class="linkedin"
+              href="https://www.linkedin.com/shareArticle?mini=true&url={{url}}&title={{title}}&source={{source}}"
+              target="blank"
+              ><i class="fa fa-linkedin"></i
+            ></a>
+
+            <!-- pinterest -->
+            <a
+              class="pinterest"
+              href="https://pinterest.com/pin/create/bookmarklet/?media={{media}}&url={{url}}&is_video=false&description={{title}}"
+              target="blank"
+              ><i class="fa fa-pinterest-p"></i
+            ></a>
           </div>
         </div>
         <div class="content">{{content}}</div>
