feat(app): first commit

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
-<footer>
-  <p>&copy; {{ 'now' | date: "%Y" }} | {{site.title}}</p>
+<footer class="footer-section">
+  <p>
+    &copy; {{ 'now' | date: "%Y" }} |
+    <a href="https://www.e-virtus.com/" target="_blank">{{site.title}}</a>, SPA.
+    All rights reserved.
+  </p>
 </footer>
