--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,9 @@
 <header>
-  <a class="site-title" style="vertical-align: middle" href="{{site.baseurl}}/"
+  <a class="site-title" href="{{site.baseurl}}/"
     ><img
       class="logo"
       width="200px"
       alt="logo e-virtus"
       src="/assets/images/e-virtus.png"
-    />{{site.title}}</a
-  >
+  /></a>
 </header>
