--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,8 +2,8 @@
 <html lang="en">
   {% include head.html %}
   <body>
+    {% include header.html %} {% include bio.html %}
     <main>
-      {% include header.html %} {% include bio.html %}
       <section class="articles">
         {% for post in site.posts %}
         <article class="article">
@@ -28,8 +28,7 @@
         </article>
         {%endfor%}
       </section>
-      {% include footer.html %}
     </main>
-    {% include category-modal.html%}
+    {% include footer.html %} {% include category-modal.html%}
   </body>
 </html>
