--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  <p>&copy; {{ 'now' | date: "%Y" }} | {{site.title}}</p>
+  <p>&copy; {{ 'now' | date: "%Y" }} | E-VIRTUS, SPA. All rights reserved.</p>
 </footer>
