--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@
             <!-- google plus -->
             <a
               class="googleplus"
-              href="https://plus.google.com/share?url={{url}}"
+              href="https://plus.google.com/share?url={{site.url}}"
               target="blank"
               ><i class="fa fa-google-plus"></i
             ></a>
