feat: Changes on blog
- Traduccion de pagina 404
- Incluye descripcion de blog e-virtus
- Se elimina fontawesome
- Agrega favicon
- Cambios en blog.html
- Cambios en post.html (share icons)
- Cambios blog/post.css
- Se agregan iconos .svg

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -48,7 +48,7 @@ img.logo {
 main {
   margin: 0 auto;
   max-width: 650px;
-  padding: 3rem 0 0 0;
+  padding: 2rem 0 0 0;
 }
 main a {
   color: var(--so-primary);
@@ -127,6 +127,10 @@ main a {
   flex-wrap: wrap;
   justify-content: flex-start;
 }
+.categories {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
 .articles .article .categories .category {
   margin: 0 0.5rem 0.3rem 0;
   display: block;
@@ -201,4 +205,12 @@ main a {
   .articles .article .article-title a {
     font-size: 1rem;
   }
+}
+
+.title {
+  margin-bottom: 1rem;
+}
+
+.site-description {
+  line-height: 1.5rem;
 }
