--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,9 @@
   {% if page.layout == "post" %}
   <script defer src="{{site.baseurl}}/assets/js/lbox.js"></script>
   {% endif %}
-  <script
-    src="https://kit.fontawesome.com/d2d24b6676.js"
-    crossorigin="anonymous"
-  ></script>
+  <link
+    rel="icon"
+    type="image/x-icon"
+    href="/assets/images/e-virtus-favicon.ico"
+  />
 </head>
