feat(app): add btn goback, scrolltop, change footer, header style

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,5 @@
     src="https://kit.fontawesome.com/d2d24b6676.js"
     crossorigin="anonymous"
   ></script>
+  <script src="{{site.baseurl}}/assets/js/utils.js"></script>
 </head>
