--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -29,6 +29,7 @@
         {%endfor%}
       </section>
     </main>
-    {% include footer.html %} {% include category-modal.html%}
+    {% include scrollTop.html %} {% include footer.html %} {% include
+    category-modal.html%}
   </body>
 </html>
