style(app): adapted responsive views

--- a/_includes/backTo.html
+++ b/_includes/backTo.html
@@ -1,4 +1,4 @@
-<a class="go-back" href="#" onclick="goBack()">
+<a id="btn-goBack" class="go-back" href="#" onclick="goBack()">
   <img src="/assets/icons/arrow-left.png" alt="arrow-top" />
   volver</a
 >
