--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header>
+<nav>
   <a class="site-title" href="{{site.baseurl}}/"
     ><img
       class="logo"
@@ -6,4 +6,21 @@
       alt="logo e-virtus"
       src="/assets/images/e-virtus.png"
   /></a>
-</header>
+
+  <ul>
+    <li>
+      <a href="{{site.baseurl}}/">Inicio</a>
+    </li>
+    <li>
+      <a href="#">Contacto</a>
+    </li>
+    <li>
+      <a
+        href="https://www.linkedin.com/company/e-virtus/posts/?feedView=all"
+        class="linkedin-icon"
+        target="blank"
+        ><img width="14px" src="/assets/icons/linkedin-in.svg"
+      /></a>
+    </li>
+  </ul>
+</nav>
