--- a/_includes/scrollTop.html
+++ b/_includes/scrollTop.html
@@ -1,20 +1,5 @@
-<div class="content-scrollTop" style="width: 100%; position: relative">
-  <button
-    class="scroll-top"
-    style="
-      position: fixed;
-      right: 50px;
-      bottom: 20px;
-      background-color: transparent;
-      padding: 0.5rem;
-      border-radius: 50%;
-    "
-    onclick="handleScrollTop()"
-  >
-    <img
-      src="/assets/icons/arrowhead-up.png"
-      style="width: 40px; height: 40px"
-      alt="arrow-top"
-    />
+<div class="content-scrollTop">
+  <button id="scroll-top">
+    <img src="/assets/icons/arrowhead-up.png" alt="arrow-top" />
   </button>
 </div>
