--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -24,7 +24,7 @@
             >{{post.date | date_to_string}} &#8226; {% assign author =
             site.data.author[post.author] %} {% if author %}
             <!-- Personal Info. -->
-            Autor: <a href="{{ author.web }}">{{ author.name }}</a>
+            Autor: <a>{{ author.name }}</a>
             {% endif %} {{page.date | date_to_string}}
           </small>
         </article>
