--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -31,17 +31,55 @@ body {
   line-height: 2rem;
   background-color: var(--gray-5);
 }
-header {
+nav {
   padding: 2rem;
   width: 80%;
   margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
-header .site-title {
+nav .site-title {
   font-size: 2.5rem;
   font-weight: bolder;
   line-height: 110%;
   color: var(--white-1);
 }
+nav ul {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  display: flex;
+  gap: 0 20px;
+}
+nav ul li {
+  font-size: 1.2rem;
+  color: var(--white-2);
+}
+nav ul li a {
+  color: var(--white-2);
+  transition: 0.5s all;
+}
+nav ul li:last-child {
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  border-radius: 35%;
+  font-size: 18px;
+  background: var(--white-2);
+  color: var(--gray-4);
+  opacity: 0.75;
+  transition: 0.5s all;
+  text-align: center;
+}
+nav ul li a:hover {
+  color: var(--so-primary);
+}
+nav ul li:last-child:hover {
+  background: var(--so-primary);
+}
+
 img.logo {
   vertical-align: middle;
 }
@@ -57,7 +95,7 @@ main a {
   font-size: 0.8rem;
 }
 
-/* header */
+/* nav */
 
 #bio {
   display: flex;
@@ -142,6 +180,23 @@ main a {
   line-height: 1.3rem;
   cursor: pointer;
 }
+.content-scrollTop {
+  width: 100%;
+  position: relative;
+}
+#scroll-top {
+  position: fixed;
+  right: 50px;
+  bottom: 20px;
+  background-color: var(--white-2);
+  padding: 0.5rem;
+  border-radius: 50%;
+  display: none;
+}
+#scroll-top img {
+  width: 40px;
+  height: 40px;
+}
 /* footer section*/
 .footer-section {
   width: 100%;
@@ -158,25 +213,48 @@ main a {
 }
 /* media query */
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 768px) {
   body {
     padding: 1.5rem;
   }
-  header .site-title {
+  nav {
+    width: 90%;
+    margin: 0 auto;
+  }
+  nav .site-title {
     font-size: 2rem;
+  }
+  nav ul {
+    justify-content: end;
+  }
+  #scroll-top {
+    position: fixed;
+    right: 50px;
+    bottom: 20px;
+    background-color: var(--white-2);
+    padding: 0.5rem;
+    border-radius: 50%;
+    display: none;
+  }
+  #scroll-top img {
+    width: 30px;
+    height: 30px;
   }
 }
 
 @media screen and (max-width: 550px) {
-  header .site-title {
+  nav .site-title {
     font-size: 3rem;
+  }
+  nav ul {
+    justify-content: end;
   }
   .articles {
     row-gap: 1.2rem;
   }
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 440px) {
   #img-wrapper img {
     max-width: 50px;
   }
@@ -195,8 +273,19 @@ main a {
     margin: 2rem 0 3rem 0;
     row-gap: 1.2rem;
   }
-  header .site-title {
+  nav {
+    width: 100%;
+    padding: 0 0 2rem 0;
+  }
+
+  nav .site-title {
     font-size: 2.4rem;
+  }
+  nav ul {
+    justify-content: end;
+  }
+  nav ul li {
+    font-size: 0.8rem;
   }
   .article {
     padding: 1.2rem;
