feat(app): add button website redirect

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
   {% include head.html %}
   <body>
-    {% include header.html %}
+    {% include button-redirect-website.html %} {% include header.html %}
     <main>
       <h1 class="title">E-Virtus | Blog</h1>
       {% include bio.html %}
