--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,8 +12,9 @@
       <a href="{{site.baseurl}}/">Inicio</a>
     </li>
     <li>
-      <a href="#">Contacto</a>
+      <a href="mailto:info@e-virtus.com">Contacto</a>
     </li>
+
     <li>
       <a
         href="https://www.linkedin.com/company/e-virtus/posts/?feedView=all"
