--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
   <!-- Look the author details up from the site config. -->
   {% assign author = site.data.author[page.author] %}
   <body>
-    {% include header.html %}
+    {% include button-redirect-website.html %} {% include header.html %}
     <main>
       {% include backTo.html %}
       <section class="article">
