--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -38,7 +38,7 @@ body {
 }
 nav {
   padding: 2rem;
-  width: 80%;
+  width: 60%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -52,7 +52,7 @@ nav {
 nav ul {
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
   list-style: none;
   display: flex;
@@ -100,6 +100,39 @@ main a {
   font-weight: bold;
   letter-spacing: 2px;
   font-size: 0.8rem;
+}
+
+/* button Redirect Website */
+.button-website {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: fixed;
+  top: 30%;
+  right: 10px;
+  padding: 10px;
+  background: var(--white-2);
+  border-radius: 5px;
+}
+.button-website p {
+  width: 20px;
+  word-wrap: break-word;
+  text-align: center;
+  line-height: 21px;
+  text-transform: uppercase;
+  color: black;
+  font-size: 20px;
+  font-weight: 600;
+}
+.button-website img {
+  height: 20px;
+  width: 20px;
+  margin-top: 5px;
+}
+.button-website:hover {
+  background: var(--so-primary);
+  opacity: 0.7;
+  transition: 0.5s all;
 }
 .go-back {
   left: 50px;
@@ -297,9 +330,10 @@ main a {
 }
 #scroll-top {
   position: fixed;
-  right: 50px;
+  right: 20px;
   bottom: 20px;
   background-color: var(--white-2);
+  opacity: 0.8;
   padding: 0.5rem;
   border-radius: 50%;
   display: none;
@@ -453,5 +487,19 @@ main a {
   }
   nav ul li {
     font-size: 0.8rem;
+  }
+  /* button Redirect Website */
+  .button-website {
+    padding: 8px;
+    border-radius: 5px;
+    opacity: 0.8;
+  }
+  .button-website p {
+    display: none;
+  }
+  .button-website img {
+    margin-top: 0px;
+    height: 25px;
+    width: 25px;
   }
 }
