--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -179,6 +179,7 @@ main a {
   flex-wrap: wrap;
   justify-content: flex-start;
   margin-top: 0.5rem;
+  gap: 10px;
 }
 .categories .category {
   margin: 0 0.5rem 0 0;
