style(app): change color, add sliders in blog and posts views.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,11 @@
   {% if page.layout == "post" %}
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/post.css" />
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/syntax.css" />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/swiper/swiper-bundle.min.css"
+  />
+
   {% else %}
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/blog.css" />
   {%endif%}
@@ -14,14 +19,13 @@
   {% if page.layout == "post" %}
   <script defer src="{{site.baseurl}}/assets/js/lbox.js"></script>
   {% endif %}
-  <script
-    src="https://kit.fontawesome.com/d2d24b6676.js"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <link
     rel="icon"
     type="image/x-icon"
     href="/assets/images/e-virtus-favicon.ico"
   />
   <script defer src="{{site.baseurl}}/assets/js/utils.js"></script>
+  <script src="/_data/services.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
 </head>
