--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,7 +5,8 @@
     {% include button-redirect-website.html %} {% include header.html %}
     <main>
       <h1 class="title">E-Virtus | Blog</h1>
-      {% include bio.html %}
+      {% include bio.html %} {% include services.html %}
+
       <section class="articles">
         {% for post in site.posts %}
         <article class="article">
