--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,7 @@
       <section class="article">
         <div class="article-header">
           <h1 class="article-title">{{page.title}}</h1>
+          {% include services.html %}
           <small class="date">
             {% if author %}
             <!-- Personal Info. -->
