--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -11,6 +11,9 @@
   --gray-6: #111111;
   --white-1: #eeeeee;
   --white-2: #a9abb3;
+  --cyan-1: rgb(126 147 190 / 0.1);
+  --tw-text-opacity: 1;
+  --cerise-1: rgb(197 87 117 / var(--tw-text-opacity));
 }
 * {
   font-family: inherit;
@@ -78,11 +81,21 @@ nav ul li:last-child {
   transition: 0.5s all;
   text-align: center;
 }
+nav ul li:last-child a {
+  color: var(--gray-4);
+}
 nav ul li a:hover {
-  color: var(--so-primary);
+  color: var(--cerise-1);
 }
 nav ul li:last-child:hover {
-  background: var(--so-primary);
+  color: var(--white-2);
+  background: var(--cyan-1);
+  border: solid 0.5px rgb(112 148 212 / 1);
+  transition: all 0.6s;
+  tab-size: 8px;
+}
+nav ul li:last-child:hover a {
+  color: var(--white-2) !important;
 }
 
 img.logo {
@@ -96,7 +109,7 @@ main {
 }
 
 main a {
-  color: var(--so-primary);
+  color: var(--cerise-1);
   font-weight: bold;
   letter-spacing: 2px;
   font-size: 0.8rem;
@@ -111,7 +124,7 @@ main a {
   top: 30%;
   right: 10px;
   padding: 10px;
-  background: var(--white-2);
+  background: var(--cyan-1);
   border-radius: 5px;
 }
 .button-website p {
@@ -120,7 +133,7 @@ main a {
   text-align: center;
   line-height: 21px;
   text-transform: uppercase;
-  color: black;
+  color: var(--cerise-1);
   font-size: 20px;
   font-weight: 600;
 }
@@ -130,10 +143,15 @@ main a {
   margin-top: 5px;
 }
 .button-website:hover {
-  background: var(--so-primary);
+  background: rgb(129 45 62 / 0.8);
   opacity: 0.7;
   transition: 0.5s all;
 }
+
+.button-website:hover p {
+  color: var(--white-2);
+}
+
 .go-back {
   left: 50px;
   background-color: transparent;
@@ -149,7 +167,7 @@ main a {
 
 .go-back:hover {
   transition: 1s all;
-  color: var(--so-secondary);
+  color: rgb(129 45 62 / 0.8);
 }
 .go-back img {
   width: 35px;
@@ -182,7 +200,7 @@ main a {
   gap: 10px;
 }
 .categories .category {
-  margin: 0 0.5rem 0 0;
+  margin: 0 0.5rem 0.3rem 0;
   display: block;
   color: var(--gray-4);
   background: var(--white-2);
@@ -191,6 +209,13 @@ main a {
   padding: 0 0.8rem;
   line-height: 1.3rem;
   cursor: pointer;
+  border: solid 0.5px (--white-2);
+}
+.categories .category:hover {
+  color: var(--white-2);
+  background: var(--cyan-1);
+  border: solid 0.5px rgb(112 148 212 / 1);
+  transition: all 0.6s;
 }
 
 /* markdown content */
@@ -340,8 +365,8 @@ main a {
   display: none;
 }
 #scroll-top img {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
 }
 
 /* footer section*/
@@ -352,7 +377,7 @@ main a {
   padding-bottom: 2rem;
 }
 .footer-section p a {
-  color: var(--gray-1);
+  color: var(--cerise-1);
   transition: 0.3s all;
 }
 .footer-section p a:hover {
@@ -425,7 +450,7 @@ main a {
   padding-bottom: 2rem;
 }
 .footer-section p a {
-  color: var(--gray-1);
+  color: var(--cerise-1);
   transition: 0.3s all;
 }
 .footer-section p a:hover {
@@ -447,6 +472,20 @@ main a {
     width: 30px;
     height: 30px;
   }
+  .slider-categories {
+    position: initial !important;
+    width: 100%;
+  }
+
+  swiper-container {
+    width: 80% !important;
+    margin: 0 auto;
+    border: solid 0.5px rgb(112 148 212 / 1);
+    margin-bottom: 2rem;
+  }
+  .article-title {
+    margin-bottom: 2rem;
+  }
 }
 @media screen and (max-width: 550px) {
   nav .site-title {
@@ -454,6 +493,23 @@ main a {
   }
   nav ul {
     justify-content: end;
+  }
+}
+
+@media screen and (max-width: 821px) {
+  .slider-categories {
+    position: initial !important;
+    width: 100%;
+  }
+
+  swiper-container {
+    width: 80% !important;
+    margin: 0 auto;
+    border: solid 0.5px rgb(112 148 212 / 1);
+    margin-bottom: 2rem;
+  }
+  .article-title {
+    margin-bottom: 2rem;
   }
 }
 @media screen and (max-width: 440px) {
@@ -503,4 +559,79 @@ main a {
     height: 25px;
     width: 25px;
   }
+  .slider-categories {
+    position: static !important;
+    width: 100%;
+  }
+
+  swiper-container {
+    width: 94% !important;
+    margin: 0 auto;
+    border: solid 0.5px rgb(112 148 212 / 1);
+    margin-bottom: 2rem;
+  }
+  .article-title {
+    margin-bottom: 2rem;
+  }
+}
+/* Slider Section */
+.slider-categories {
+  width: auto;
+  position: absolute;
+  top: 200px;
+  left: 10px;
+}
+swiper-container {
+  width: 300px;
+  height: 100%;
+  background: var(--cyan-1);
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(162, 182, 221, 0.597);
+}
+swiper-container:hover {
+  box-shadow: 0px 0px 15px rgba(162, 182, 221, 0.597);
+  transition: all 0.5s ease-in;
+}
+
+swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+swiper-slide h1 {
+  color: var(--white-2);
+  font-size: 13px;
+  letter-spacing: 1px;
+}
+swiper-slide a {
+  color: var(--gray-4);
+  background: var(--white-2);
+  border-radius: 5px;
+  font-size: 0.7rem;
+  line-height: 1.3rem;
+  padding: 0.2rem 0.8rem;
+  cursor: pointer;
+  border: solid 0.5px (--white-2);
+}
+swiper-slide a:hover {
+  color: var(--white-2);
+  background: var(--cyan-1);
+  border: solid 0.5px rgb(112 148 212 / 1);
+  transition: all 0.6s;
+}
+swiper-container {
+  margin-left: auto;
+  margin-right: auto;
 }
