--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -30,10 +30,10 @@
 html,
 body {
   color: var(--white-2);
-  background-color: var(--gray-6);
+  background-color: var(--cyan-1);
   font-family: "JetBrains Mono", monospace;
   line-height: 2rem;
-  background-color: var(--gray-5);
+  background-color: var(--cyan-1);
 }
 .content a {
   color: cyan;
