--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,5 +26,9 @@
     href="/assets/images/e-virtus-favicon.ico"
   />
   <script defer src="{{site.baseurl}}/assets/js/utils.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js "
+    integrity="sha384-0AJY8UERsBUKdWcyF3o2kisLKeIo6G4Tbd8Y6fbyw6qYmn4WBuqcvxokp8m2UzSD"
+    crossorigin="anonymous"
+  ></script>
 </head>
