--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,20 +1,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta
-    http-equiv="Content-Security-Policy"
-    content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self'"
-  />
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{site.title}} | {{page.title}}</title>
   {% if page.layout == "post" %}
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/post.css" />
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/syntax.css" />
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/swiper/swiper-bundle.min.css"
-  />
+  <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css" />
 
   {% else %}
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/blog.css" />
@@ -31,9 +23,5 @@
     href="/assets/images/e-virtus-favicon.ico"
   />
   <script defer src="{{site.baseurl}}/assets/js/utils.js"></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js "
-    integrity="sha384-0AJY8UERsBUKdWcyF3o2kisLKeIo6G4Tbd8Y6fbyw6qYmn4WBuqcvxokp8m2UzSD"
-    crossorigin="anonymous"
-  ></script>
+  <script src="/assets/js/swiper-element-bundle.min.js"></script>
 </head>
