--- a/_includes/services.html
+++ b/_includes/services.html
@@ -56,7 +56,7 @@
           src="https://e-virtus.s3.us-east-2.amazonaws.com/E_Virtus_2022_Hacking_Continuo_v2_pptx_1_425d0a4499.png"
           alt="dev"
         />
-        <h1>Managed Detection and Response</h1>
+        <h1>DevSecOps</h1>
         <a
           href="https://www.e-virtus.com/services/1656708529/devsecops"
           target="_blank"
@@ -70,7 +70,7 @@
           src="https://e-virtus.s3.us-east-2.amazonaws.com/MDR_da14144d23.png"
           alt="dev"
         />
-        <h1>Breach and Attack Simulation</h1>
+        <h1>Managed Detection and Response</h1>
         <a
           href="https://www.e-virtus.com/services/1656967849/managed+detection+and+response"
           target="_blank"
