feat(services): update link to redirect

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -16,7 +16,7 @@
         />
         <h1>Breach and Attack Simulation</h1>
         <a
-          href="https://www.e-virtus.com/services/1618863074/breach+and+attack+simulation"
+          href="https://www.e-virtus.com/service/breach+attack+simulation"
           target="_blank"
           >Ver más</a
         >
@@ -30,7 +30,7 @@
         />
         <h1>Vulnerability and Patch Management</h1>
         <a
-          href="https://www.e-virtus.com/services/1622070675/vulnerability+and+patch+management"
+          href="https://www.e-virtus.com/service/vulnerability+patchManagement"
           target="_blank"
           >Ver más</a
         >
@@ -43,9 +43,7 @@
           alt="dev"
         />
         <h1>Red Team</h1>
-        <a
-          href="https://www.e-virtus.com/services/1656706687/red+team"
-          target="_blank"
+        <a href="https://www.e-virtus.com/service/red+team" target="_blank"
           >Ver más</a
         >
       </div></swiper-slide
@@ -57,9 +55,7 @@
           alt="dev"
         />
         <h1>DevSecOps</h1>
-        <a
-          href="https://www.e-virtus.com/services/1656708529/devsecops"
-          target="_blank"
+        <a href="https://www.e-virtus.com/service/dev+sec+ops" target="_blank"
           >Ver más</a
         >
       </div>
@@ -72,7 +68,7 @@
         />
         <h1>Managed Detection and Response</h1>
         <a
-          href="https://www.e-virtus.com/services/1656967849/managed+detection+and+response"
+          href="https://www.e-virtus.com/service/managed+detection+response"
           target="_blank"
           >Ver más</a
         >
