--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer-section">
   <p>
-    &copy; {{ 'now' | date: "%Y" }} |
+    &copy; 2024 |
     <a href="https://www.e-virtus.com/" target="_blank">{{site.title}}</a>, SPA.
     All rights reserved.
   </p>
