--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -104,7 +104,7 @@ img.logo {
 }
 main {
   margin: 0 auto;
-  max-width: 650px;
+  max-width: 780px;
   padding: 2rem 0 0 0;
 }
 
@@ -252,6 +252,7 @@ main a {
 .content h5,
 .content h6 {
   margin: 1.75rem 0;
+  color: var(--white-1);
 }
 .content blockquote {
   padding-left: 1.42188rem;
@@ -276,6 +277,7 @@ main a {
   margin-left: 1rem;
   margin-bottom: 0;
 }
+
 .content table {
   width: 100%;
   max-width: 100%;
@@ -309,7 +311,7 @@ main a {
 
 .content pre {
   background: var(--gray-3) !important;
-  padding: 1rem 2rem;
+  padding: 1rem 1.5rem;
   margin-bottom: 1.75rem;
 }
 
@@ -318,6 +320,7 @@ main a {
   color: var(--white-2);
   white-space: pre;
   background-color: var(--gray-3);
+  font-size: 14px;
 }
 
 /* lbox */
