Add Google Analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,4 +24,18 @@
   />
   <script defer src="{{site.baseurl}}/assets/js/utils.js"></script>
   <script src="/assets/js/swiper-element-bundle.min.js"></script>
+
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-BEHR635K42"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-BEHR635K42");
+  </script>
 </head>
